add classes petService and petDTO